# HO-GDB

./: LICENSE  README.md  pyproject.toml
HOGDB/: .env
HOGDB/db/: __init__.py  db.py  label.py  neo4j.py  property.py  schema.py
HOGDB/graph/: __init__.py  edge.py  graph_element.py  graph_storage.py  graph_with_subgraph_storage.py  graph_with_tuple_storage.py  hyperedge.py  hypergraph_storage.py  node.py  node_tuple.py  path.py  subgraph.py
HOGDB/proxy/: __init__.py  neo4j-server.py  proxy.py
benchmark/: README.md  generate_csvs.py  gnn_benchmark.py  model.py  read_benchmark.py  read_weak_benchmark.py  scale_benchmark.py  utils.py
examples/: simple_node_tuples.py
